starting to do the basic framework

--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel ="stylesheet" href="styles.css">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Test thread</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, nihil blanditiis inventore fugit ullam maxime quia animi doloribus in officiis? Quaerat cum possimus molestiae ducimus totam, eveniet nobis animi dolorem.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, nihil blanditiis inventore fugit ullam maxime quia animi doloribus in officiis? Quaerat cum possimus molestiae ducimus totam, eveniet nobis animi dolorem.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, nihil blanditiis inventore fugit ullam maxime quia animi doloribus in officiis? Quaerat cum possimus molestiae ducimus totam, eveniet nobis animi dolorem.</p>
+    <aside id="sidebar">
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </aside>
+    <div id="main-content">
+        <section id="home">
+            <h2>Home</h2>
+            <p>Welcome to my portfolio!</p>
+        </section>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Introduce yourself here...</p>
+        </section>
+        <section id="resume">
+            <h2>Resume</h2>
+            <p>Resume details...</p>
+        </section>
+        <section id="portfolio">
+            <h2>Portfolio</h2>
+            <div class="project">
+                <h3>Project Title</h3>
+                <p>Project description...</p>
+            </div>
+            <!-- Add more projects as needed -->
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Contact information...</p>
+        </section>
+    </div>
+    <footer>
+        <p>© 2024 Your Name. All rights reserved.</p>
+    </footer>
 </body>
 </html>
