--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <section id="home">
             <h2>Home</h2>
             <p>Welcome to my portfolio!</p>
+            <a href="#contact" class="contact-button">Contact Me</a>
+        </section>
+        
         </section>
         <section id="about">
             <h2>About Me</h2>
@@ -45,7 +48,7 @@
         </section>
     </div>
     <footer>
-        <p>© 2024 Your Name. All rights reserved.</p>
+        <p>© 2024 DARIN LEE. All rights reserved.</p>
     </footer>
 </body>
 </html>
