working on home page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </aside>
     <div id="main-content">
         <section id="home">
-            <h2>Home</h2>
-            <p>Welcome to my portfolio!</p>
+            <h3>Welcome to my portfolio!</h3>
+            <h1> I'm Darin Lee</h1>
             <a href="#contact" class="contact-button">Contact Me</a>
         </section>
         
