--- a/index.html
+++ b/index.html
@@ -22,33 +22,13 @@
     <div id="main-content">
         <section id="home" class="page">
             <h3>Welcome to my portfolio!</h3>
+            <div></div>
             <h1>I'm Darin Lee</h1>
             <a href="#contact" class="contact-button">Contact Me</a>
         </section>
         <section id="about" class="page">
             <h2>About Me</h2>
             <p>Introduce yourself here...</p>
-        </section>
-        <section id="skills" class="page">
-            <h2>Skills</h2>
-            <div class="skill">
-                <h3>HTML</h3>
-                <div class="progress">
-                    <div class="progress-bar" style="width: 90%;"></div>
-                </div>
-            </div>
-            <div class="skill">
-                <h3>CSS</h3>
-                <div class="progress">
-                    <div class="progress-bar" style="width: 80%;"></div>
-                </div>
-            </div>
-            <div class="skill">
-                <h3>JavaScript</h3>
-                <div class="progress">
-                    <div class="progress-bar" style="width: 70%;"></div>
-                </div>
-            </div>
         </section>
         <section id="resume" class="page">
             <h2>Resume</h2>
@@ -65,15 +45,6 @@
         </section>
         <section id="contact" class="page">
             <h2>Contact</h2>
-            <form id="contact-form">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
         </section>
     </div>
     <footer>
