more updates to home

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#skills">Skills</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -21,11 +20,17 @@
     </aside>
     <div id="main-content">
         <section id="home" class="page">
-            <h3>Welcome to my portfolio!</h3>
-            <div></div>
-            <h1>I'm Darin Lee</h1>
-            <a href="#contact" class="contact-button">Contact Me</a>
+            <div class="overlay">
+                <div class="content">
+                    <h3>Welcome to my portfolio!</h3>
+                    <h1>I'm Darin Lee</h1>
+                    <p>I'm a college student majoring in Business Information Management and this is a portfolio to show
+                        the projects I have been involved in.</p>
+                    <a href="#contact" class="contact-button">Contact Me</a>
+                </div>
+            </div>
         </section>
+        
         <section id="about" class="page">
             <h2>About Me</h2>
             <p>Introduce yourself here...</p>
