home stuff update

--- a/index.html
+++ b/index.html
@@ -20,14 +20,23 @@
     </aside>
     <div id="main-content">
         <section id="home" class="page">
-            <div class="overlay">
-                <div class="content">
-                    <h3>Welcome to my portfolio!</h3>
-                    <h1>I'm Darin Lee</h1>
-                    <a href="#contact" class="contact-button">Contact Me</a>
-                </div>
+            <div class="circle about">
+                <a href="#about">About</a>
+            </div>
+            <div class="circle resume">
+                <a href="#resume">Resume</a>
+            </div>
+            <div class="circle projects">
+                <a href="#projects">Projects</a>
+            </div>
+            <div class="circle contact">
+                <a href="#contact">Contact</a>
+            </div>
+            <div class="central-circle">
+                <!-- Placeholder for your photo or icon -->
             </div>
         </section>
+        
         
         <section id="about" class="page">
             <h1>About Me</h1>
