--- a/index.html
+++ b/index.html
@@ -5,15 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Darin Lee</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Link to Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="content">
-            <h1>Hi, I am Darin Lee</h1>
+            <div class="text">
+                <span class="hi">Hi,</span>
+                <span class="name">I'm Darin Lee</span>
+                <div class="buttons">
+                    <a href="#about" class="btn btn-about">About Me</a>
+                    <a href="#resume" class="btn btn-resume">Resume</a>
+                    <a href="#portfolio" class="btn btn-portfolio">Portfolio</a>
+                    <a href="#contact" class="btn btn-contact">Contact</a>
+                </div>
+            </div>
             <div class="portrait">
                 <img src="https://via.placeholder.com/150" alt="Portrait of Darin Lee">
             </div>
         </div>
     </div>
+    <div id="about" class="section">About Me Section</div>
+    <div id="resume" class="section">Resume Section</div>
+    <div id="portfolio" class="section">Portfolio Section</div>
+    <div id="contact" class="section">Contact Section</div>
 </body>
 </html>
