--- a/index.html
+++ b/index.html
@@ -10,41 +10,59 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="#home">Home</a>
-        <a href="#about">About Me</a>
+        <a href="#about">About</a>
         <a href="#resume">Resume</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
     </div>
 
     <div id="home" class="section home">
+        <div class="bubbles">
+            <a href="#about" class="bubble about">About</a>
+            <a href="#resume" class="bubble resume">Resume</a>
+            <a href="#portfolio" class="bubble portfolio">Portfolio</a>
+            <a href="#contact" class="bubble contact">Contact</a>
+        </div>
+        
         <div class="container">
+            <div class="portrait">
+                <img src="https://via.placeholder.com/150" alt="Portrait of Darin Lee">
+            </div>
             <div class="content">
                 <div class="text">
-                    <span class="hi">Hi,</span>
-                    <span class="name">I'm Darin Lee</span>
-                </div>
-                <div class="portrait">
-                    <img src="https://via.placeholder.com/150" alt="Portrait of Darin Lee">
+                    <span class="hi">Hi, I'm</span>
+                    <span class="name">Darin Lee</span>
                 </div>
             </div>
         </div>
     </div>
+
     <div id="about" class="section about">
-        <h1>About Me</h1>
-        <p>This is the About Me section.</p>
+        <div class="container">
+            <h1>About Me</h1>
+            <p>This is the About Me section.</p>
+        </div>
     </div>
+
     <div id="resume" class="section resume">
-        <h1>Resume</h1>
-        <p>This is the Resume section.</p>
+        <div class="container">
+            <h1>Resume</h1>
+            <p>This is the Resume section.</p>
+        </div>
     </div>
+
     <div id="portfolio" class="section portfolio">
-        <h1>Portfolio</h1>
-        <p>This is the Portfolio section.</p>
+        <div class="container">
+            <h1>Portfolio</h1>
+            <p>This is the Portfolio section.</p>
+        </div>
     </div>
+
     <div id="contact" class="section contact">
-        <h1>Contact</h1>
-        <p>This is the Contact section.</p>
+        <div class="container">
+            <h1>Contact</h1>
+            <p>This is the Contact section.</p>
+        </div>
     </div>
 
     <script src="script.js"></script>
